--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,24 +1,17 @@
-#exortPattern("^[^\\.]")
 export(flowDensity)
 export(plot, getflowFrame)
-export(.flowDensity)
-export(deGate, plotDens, getPeaks,notSubFrame,nmRemove,.trackSlope)
+#export(.flowDensity)
+export(deGate, plotDens, getPeaks, notSubFrame, nmRemove, .trackSlope)
 exportClass(CellPopulation)
 import(flowCore)
 import(gplots)
-import(RFOC)
-
-import(rgeos)
-importFrom(sp,point.in.polygon)
-importFrom(sp,SpatialPolygons)
-importFrom(sp,Polygons)
-importFrom(sp,Polygon)
-importFrom(rgeos,gIntersects)
-importFrom(rgeos,gDifference)
-importClassesFrom(flowWorkspace,GatingHierarchy)
-importFrom(flowWorkspace,getData)
 import(car)
-#importFrom("graphics", plot)
-importFrom("grDevices", colorRampPalette)
-
+import(RFOC)
+importFrom(sp, Polygons, Polygon, point.in.polygon, SpatialPolygons)
+importFrom(rgeos, gIntersects, gDifference)
+importFrom(flowWorkspace, getData)
+importFrom(graphics, mtext, plot, abline, polygon, par, layout, layout.show)
+importFrom(grDevices, chull, colors, colorRampPalette, densCols)
+importFrom(stats, sd, quantile, median, density, smooth.spline, splinefun)
 importFrom(methods, new)
+importClassesFrom(flowWorkspace, GatingHierarchy)
