Added gBuffer to import from rgeos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ import(gplots)
 import(car)
 import(RFOC)
 importFrom(sp, Polygons, Polygon, point.in.polygon, SpatialPolygons)
-importFrom(rgeos, gIntersects, gDifference)
+importFrom(rgeos, gIntersects, gDifference,gBuffer)
 importFrom(flowWorkspace, getData)
 importFrom(graphics, mtext, plot, abline, polygon, par, layout, layout.show)
 importFrom(grDevices, chull, colors, colorRampPalette, densCols)
