--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,8 @@ import(car)
 import(RFOC)
 importFrom(sp, Polygons, Polygon, point.in.polygon, SpatialPolygons)
 importFrom(rgeos, gIntersects, gDifference,gBuffer)
-importFrom(flowWorkspace, getData)
+importFrom(flowViz,contour)
+importFrom(flowWorkspace, gh_pop_get_data)
 importFrom(graphics, mtext, plot, abline, polygon, par, layout, layout.show)
 importFrom(grDevices, chull, colors, colorRampPalette, densCols)
 importFrom(stats, sd, quantile, median, density, smooth.spline, splinefun)
