--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ importFrom(rgeos, gIntersects, gDifference,gBuffer)
 importFrom(flowViz,contour)
 importFrom(flowWorkspace, gh_pop_get_data)
 importFrom(graphics, mtext, plot, abline, polygon, par, layout, layout.show)
-importFrom(grDevices, chull, colors, colorRampPalette, densCols)
+importFrom(grDevices, chull, colors, colorRampPalette, densCols, adjustcolor)
 importFrom(stats, sd, quantile, median, density, smooth.spline, splinefun)
 importFrom(methods, new)
 importClassesFrom(flowWorkspace, GatingHierarchy)
