--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: flowDensity
 Type: Package
 Title: Sequential Flow Cytometry Data Gating
-Version: 1.27.1
+Version: 1.27.2
 Date: 2014-10-14
 Author: Mehrnoush Malek,M. Jafar Taghiyar
 Maintainer: Mehrnoush Malek <mmalekes@bccrc.ca>
@@ -27,7 +27,7 @@ SystemRequirements:  GEOS (>= 3.2.0);for building from source: GEOS
 License: Artistic-2.0
 biocViews: Bioinformatics, FlowCytometry, CellBiology, Clustering,
         Cancer, FlowCytData,  DataRepresentation, StemCell, DensityGating
-Suggests: knitr,markdown
+Suggests: knitr,rmarkdown
 LazyLoad: yes
 VignetteBuilder: knitr
 SystemRequirements: xml2, GNU make, C++11
