--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Sequential Flow Cytometry Data Gating
 Version: 1.29.1
 Date: 2014-10-14
 Author: Mehrnoush Malek,M. Jafar Taghiyar
-Maintainer: Mehrnoush Malek <mmalekes@bccrc.ca>
+Maintainer: Mehrnoush Malek <mehrmalek@gmail.com>
 Description: This package provides tools for automated sequential
         gating analogous to the manual gating strategy based on the
         density of the data.
