--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: flowDensity
 Type: Package
 Title: Sequential Flow Cytometry Data Gating
-Version: 1.29.1
+Version: 1.27.4
 Date: 2014-10-14
 Author: Mehrnoush Malek,M. Jafar Taghiyar
-Maintainer: Mehrnoush Malek <mehrmalek@gmail.com>
+Maintainer: Mehrnoush Malek <mmalekes@bccrc.ca>
 Description: This package provides tools for automated sequential
         gating analogous to the manual gating strategy based on the
         density of the data.
@@ -12,18 +12,13 @@ Imports: flowCore,
          graphics,
          flowViz (>= 1.46.1),
          car,
-         sp,
-         rgeos,
+         polyclip,
          gplots,
          RFOC,
          flowWorkspace (>= 3.33.1),
          methods,
          stats,
          grDevices
-SystemRequirements:  GEOS (>= 3.2.0);for building from source: GEOS
-        from http://trac.osgeo.org/geos/; GEOS OSX frameworks built by
-        William Kyngesburye at http://www.kyngchaos.com/ may be used
-        for source installs on OSX.
 License: Artistic-2.0
 biocViews: Bioinformatics, FlowCytometry, CellBiology, Clustering,
         Cancer, FlowCytData,  DataRepresentation, StemCell, DensityGating
