--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,7 @@ import(flowCore)
 import(gplots)
 import(car)
 import(RFOC)
-importFrom(sp, Polygons, Polygon, point.in.polygon, SpatialPolygons)
-importFrom(rgeos, gIntersects, gDifference,gBuffer)
+importFrom(polyclip, pointinpolygon, polylineoffset)
 importFrom(flowViz,contour)
 importFrom(flowWorkspace, gh_pop_get_data)
 importFrom(graphics, mtext, plot, abline, polygon, par, layout, layout.show)
