--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ import(flowCore)
 import(gplots)
 import(car)
 import(RFOC)
-importFrom(polyclip, pointinpolygon, polylineoffset)
+importFrom(polyclip, pointinpolygon, polylineoffset, polyclip)
 importFrom(flowViz,contour)
 importFrom(flowWorkspace, gh_pop_get_data)
 importFrom(graphics, mtext, plot, abline, polygon, par, layout, layout.show)
